--- a/app/src/main/res/layout/fragment_article_details.xml
+++ b/app/src/main/res/layout/fragment_article_details.xml
@@ -31,6 +31,7 @@
         android:fontFamily="@font/merriweather_black"
         android:textColor="@color/colorPrimary"
         android:textSize="20sp"
+        app:layout_goneMarginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/articleImage" />
